@@ -108,13 +108,8 @@ bool ImGuiEx::Canvas::Begin(ImGuiID id, const ImVec2& size)
 
     UpdateViewTransformPosition();
 
-# if IMGUI_VERSION_NUM > 18415
     if (ImGui::IsClippedEx(m_WidgetRect, id))
         return false;
-# else
-    if (ImGui::IsClippedEx(m_WidgetRect, id, false))
-        return false;
-# endif
 
     // Save current channel, so we can assert when user
     // call canvas API with different one.
@@ -375,13 +370,8 @@ void ImGuiEx::Canvas::SaveViewportState()
     m_WindowPosBackup = window->Pos;
     m_ViewportPosBackup = viewport->Pos;
     m_ViewportSizeBackup = viewport->Size;
-# if IMGUI_VERSION_NUM > 18002
     m_ViewportWorkPosBackup = viewport->WorkPos;
     m_ViewportWorkSizeBackup = viewport->WorkSize;
-# else
-    m_ViewportWorkOffsetMinBackup = viewport->WorkOffsetMin;
-    m_ViewportWorkOffsetMaxBackup = viewport->WorkOffsetMax;
-# endif
 # endif
 }
 
@@ -394,13 +384,8 @@ void ImGuiEx::Canvas::RestoreViewportState()
     window->Pos = m_WindowPosBackup;
     viewport->Pos = m_ViewportPosBackup;
     viewport->Size = m_ViewportSizeBackup;
-# if IMGUI_VERSION_NUM > 18002
     viewport->WorkPos = m_ViewportWorkPosBackup;
     viewport->WorkSize = m_ViewportWorkSizeBackup;
-# else
-    viewport->WorkOffsetMin = m_ViewportWorkOffsetMinBackup;
-    viewport->WorkOffsetMax = m_ViewportWorkOffsetMaxBackup;
-# endif
 # endif
 }
 
@@ -463,13 +448,8 @@ void ImGuiEx::Canvas::EnterLocalSpace()
     viewport->Pos  = viewport_min;
     viewport->Size = viewport_max - viewport_min;
 
-# if IMGUI_VERSION_NUM > 18002
     viewport->WorkPos  = m_ViewportWorkPosBackup  * m_View.InvScale;
     viewport->WorkSize = m_ViewportWorkSizeBackup * m_View.InvScale;
-# else
-    viewport->WorkOffsetMin = m_ViewportWorkOffsetMinBackup * m_View.InvScale;
-    viewport->WorkOffsetMax = m_ViewportWorkOffsetMaxBackup * m_View.InvScale;
-# endif
 # endif
 
     // Clip rectangle in parent canvas space and move it to local space.
